--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                         </p>
                     </div>
                     <div class="contact__btn">
-                        <a href="#contact" class="btn btn--secondary">Get in touch</a>
+                        <a href="mailto:nbinnoushad07@gmail.com?subject=hey nihal noushad" class="btn btn--secondary">Get in touch</a>
                     </div>
                 </div>
             </div>
@@ -457,11 +457,11 @@
                 </div>
                 <div class="footer__content">
                     <h4 class="footer__title">Email Me</h4>
-                    <a href="#" class="footer__contact">nbinnoushad07@gmail.com</a>
+                    <a href="mailto:nbinnoushad07@gmail.com" class="footer__contact">nbinnoushad07@gmail.com</a>
                 </div>
                 <div class="footer__content">
                     <h4 class="footer__title">Call Me</h4>
-                    <a href="#" class="footer__contact">+91 9744683120</a>
+                    <a href="tel:919744683120" class="footer__contact">+91 9744683120</a>
                 </div>
             </div>
             <p class="footer__copyright">&copy; 2023 nihal-noushad-vk. All Rights Reserved</p>
