--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                 </div>
                 <div class="footer__content">
                     <h4 class="footer__title">Call Me</h4>
-                    <a href="tel:919744683120" class="footer__contact"> 9744683120</a>
+                    <a href="tel:919744683120" class="footer__contact">+91 9744683120</a>
                 </div>
             </div>
             <p class="footer__copyright">&copy; 2023 nihal-noushad-vk. All Rights Reserved</p>
