--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                             </a>
                         </li>
                         <li class="footer__social-item">
-                            <a href="https://github.com/dashboard" target="_blank" class="footer__social-link">
+                            <a href="https://github.com/Nihal-vk" target="_blank" class="footer__social-link">
                                 <i class="ri-github-fill"></i>
                             </a>
                         </li>
