--- a/index.html
+++ b/index.html
@@ -231,8 +231,18 @@
                                 MongoDB, Express.js, React, and Node.js. My focus is on gaining proficiency and
                                 deepening my knowledge in these technologies.
                             </p>
-                            <span class="qualification__date">2022 - present</span>
+                            <span class="qualification__date">2022 - 2023</span>
                         </div>
+                        <!-- Education 3-->
+                        <div class="qualification__item">
+                            <h3 class="qualification__title">MS Office</h3>
+                            <p class="qualification__description">Developed advanced skills in MS Office Suite (Word, Advanced Excel,
+                                PowerPoint) at Spectrum Computers. Expertise includes document creation, data analysis, and professional
+                                presentations.
+                            </p>
+                            <span class="qualification__date">2024</span>
+                        </div>
+                        
                         <!-- Education 3-->
                         <!-- <div class="qualification__item">
                             <h3 class="qualification__title">Software Engineer</h3>
@@ -245,7 +255,7 @@
                 </div>
                 <div class="qualification__footer">
                     <p class="qualification__footer-text">See my full resume</p>
-                    <a href="assets/Nihal noushad vk.pdf" download class="btn btn--primary">Resume</a>
+                    <a href="assets/Nihal noushad vk (3).pdf" download class="btn btn--primary">Resume</a>
                 </div>
             </div>
         </section>
@@ -418,7 +428,7 @@
                         </p>
                     </div>
                     <div class="contact__btn">
-                        <a href="mailto:nbinnoushad07@gmail.com?subject=hey nihal noushad"
+                        <a href="mailto:nihalnoushadvk@gmail.com?subject=hey nihal noushad"
                             class="btn btn--secondary">Get in touch</a>
                     </div>
                 </div>
@@ -458,11 +468,11 @@
                 </div>
                 <div class="footer__content">
                     <h4 class="footer__title">Email Me</h4>
-                    <a href="mailto:nbinnoushad07@gmail.com" class="footer__contact">nbinnoushad07@gmail.com</a>
+                    <a href="mailto:nihalnoushadvk@gmail.com" class="footer__contact">nihalnoushadvk@gmail.com</a>
                 </div>
                 <div class="footer__content">
                     <h4 class="footer__title">Call Me</h4>
-                    <a href="tel:919744683120" class="footer__contact">+91 9744683120</a>
+                    <a href="tel:+966 535315632" class="footer__contact">+966 535315632</a>
                 </div>
             </div>
             <p class="footer__copyright">&copy; 2023 nihal-noushad-vk. All Rights Reserved</p>
